clang/test/BSC/Negative/Trait/r3/trait_is_undefined1/trait_is_undefined1.cbs
// RUN: %clang_cc1 -verify %s

struct S {
  _Trait M* m; // expected-error {{'_Trait M' must be defined before it can be used}}
};

void f(_Trait T* t) {}  // expected-warning {{declaration of '_Trait T' will not be visible outside of this function}}
// expected-error@-1 {{'_Trait T' must be defined before it can be used}}

_Trait T* test2(){} // expected-error {{'_Trait T' must be defined before it can be used}}

int main() {
  int a = 3;
  _Trait T* t = &a; // expected-warning {{incompatible pointer types initializing '_Trait T *' with an expression of type 'int *'}}
  return 0;
}